# backspace-detective

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
backspace-analyzer/: Cargo.toml
backspace-analyzer/src/: lib.rs
src/: backspaceStatsPanel.ts  extension.ts  keystrokeTracker.ts  statusBarManager.ts  wasmLoader.ts
src/test/: extension.test.ts  runTest.ts
src/test/suite/: index.ts
