[package]
name = "backspace-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A library to analyze backspace usage in code editing to detect AI vs human coding"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
wasm-bindgen-futures = "0.4.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
